2006-12-18  Mark Rowe  <bdash@webkit.org>

        Reviewed by Brady.

        Bug 11870: Bug 11866 caused layout test regression in fast/forms/input-value.html
        http://bugs.webkit.org/show_bug.cgi?id=11870

        * fast/forms/input-value-expected.txt: Updated results.

2006-12-18  Beth Dakin  <bdakin@apple.com>

        Reviewed by Adele.

        Test case for <rdar://problem/4749770> WebCore crashes on a blog 
        website in WebCore::InlineBox::root() + 6

        * fast/lists/inlineBoxWrapperNullCheck-expected.checksum: Added.
        * fast/lists/inlineBoxWrapperNullCheck-expected.png: Added.
        * fast/lists/inlineBoxWrapperNullCheck-expected.txt: Added.
        * fast/lists/inlineBoxWrapperNullCheck.html: Added.

2006-12-18  Dex Deacon  <occupant4@gmail.com>

        Reviewed by Maciej.

        Layout tests for http://bugs.webkit.org/show_bug.cgi?id=11760

        * ChangeLog:
        * fast/images/animated-gif-with-offsets-expected.txt: Added.
        * fast/images/animated-gif-with-offsets.html: Added.
        * fast/images/resources/animated-gif-with-offsets.gif: Added.

2006-12-18  Kirby White  <KWhiteRight@gmail.com>

        Reviewed by Darin.

        Layout tests for http://bugs.webkit.org/show_bug.cgi?id=11866

        * fast/dom/HTMLInputElement/input-checked-reset-expected.txt: Added.
        * fast/dom/HTMLInputElement/input-checked-reset.html: Added.
        * fast/dom/HTMLInputElement/input-text-reset-expected.txt: Added.
        * fast/dom/HTMLInputElement/input-text-reset.html: Added.

2006-12-18  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Mitz.

        Test for http://bugs.webkit.org/show_bug.cgi?id=7170
        `window.parent.[frameName].location=' fails if the target frame has not yet loaded a document

        * fast/frames/resources/set-unloaded-frame-location-1.html: Added.
        * fast/frames/resources/set-unloaded-frame-location-2.html: Added.