@@ -1,0 +1,3 @@
+﻿<?xml version="1.0" encoding="UTF-8" ?>
+<?xml-stylesheet type="text/xsl" href="resources/location-test-xsl-style-sheet.xsl"?>
+<stub/>
