@@ -1,3 +1,13 @@
+2006-12-18  Alice Liu  <alice.liu@apple.com>
+
+        Reviewed by Adam.
+
+        Test case for <rdar://problem/4766174> REGRESSION(r16081): Aspect eWFM: Unable to log in
+
+        * http/tests/misc/location-test-xsl-style-sheet-expected.txt: Added.
+        * http/tests/misc/location-test-xsl-style-sheet.xml: Added.
+        * http/tests/misc/resources/location-test-xsl-style-sheet.xsl: Added.
+
 2006-12-18  Mark Rowe  <bdash@webkit.org>
 
         Reviewed by Brady.
